<resources>
    <string name="app_name">CryptoCurrencies</string>

    <string name="load_images_url">https://cryptoicons.org/api/icon/%s/%s</string>
    <string name="load_images_url_coincap">https://static.coincap.io/assets/icons/%s@2x.png</string>
    <string name="filter_title">Filtro</string>
    <string name="name">Name</string>
    <string name="price">Price USD</string>
    <string name="change">Last 24h</string>
    <string name="currency_title">Currency</string>
    <string name="selection_title">Selection</string>
    <string name="save">Save</string>
    <string name="order_title">order</string>
    <string name="by_rank">By Rank</string>
    <string name="by_name">By Name</string>
    <string name="by_price">By Price</string>
    <string name="by_change_24hrs">By Change 24hrs</string>
    <string name="order_by">Order By</string>
    <string name="details">Details</string>
    <string name="markets">Markets</string>
    <string name="history">History</string>

    <string name="volume24h">Volume24h:</string>
    <string name="exchange">Exchange:</string>
    <string name="rank">Rank: </string>
    <string name="symbol">Symbol: </string>
    <string name="supply">Supply: </string>
    <string name="max_supply">Max Supply: </string>
    <string name="market_cap_usd">Market Cap (USD): </string>
    <string name="volume_24hrs_usd">Volume 24hrs (USD): </string>
    <string name="change_24hrs">Change 24hrs: </string>
    <string name="updated_on">Update on %s</string>
    <string name="no_changes_to_sync">no changes to sync</string>
</resources>
