<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

        <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_margin="1dp">


            <TextView
                android:layout_marginStart="4dp"
                android:textColor="@color/colorSecondary"
                style="@style/MyCustomTextView"
                android:text="#"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rank"/>

            <TextView
                    android:textColor="@color/colorSecondary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:id="@+id/textView"
                    android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="38dp"
                    android:text="@string/name"/>

            <TextView
                    android:text="@string/price"
                    android:textColor="@color/colorSecondary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:id="@+id/textView2"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
                    app:layout_constraintVertical_bias="0.0"/>

            <TextView
                    android:text="@string/change"
                    android:gravity="right"
                    android:textColor="@color/colorSecondary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:id="@+id/textView3"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintVertical_bias="0.0"/>


        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>